// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateAmazonHTML > generate correct amazon HTML for clothing product 1`] = `
"
    <div class="product-container" data-product-id='_7u2l'>
        <div class="product-image-container">
            <img class="product-image"
            fetchpriority=auto
            loading=lazy
            decode=async
            src="/images/products/adults-plain-cotton-tshirt-2-pack-teal.webp">
        </div>

        <div class="product-name">
            Adults Plain Cotton T-Shirt - 2 Pack
        </div>

        <div class="product-rating-container">
            <img class="product-rating-stars"
            src="/images/ratings/rating-45.png"
            fetchpriority='high'>
            <div class="product-rating-count link-primary">
            56
            </div>
        </div>

        <div class="product-price">
          $7.99
        </div>
<div class="product-quantity-container"><select class="ProductQuantitySelector"><option selected=selected value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select></div>
        <div class='size-chart-container'>
          <a
                  href="/images/clothing-size-chart.webp"
                  target="_blank"
                  class="size-chart"
                >
                  Size chart
                </a>

        </div>

          <div class="added-to-cart added-to-cart-_7u2l">
            <img src="/images/icons/checkmark.svg">
            Added
          </div>

          <button class="add-to-cart-button button-primary"
          data-product-id="_7u2l">
            Add to Cart
          </button>
        </div>
    </div>
    "
`;

exports[`generateAmazonHTML > generate correct amazon HTML for non-clothing product 1`] = `
"
    <div class="product-container" data-product-id='7nDww'>
        <div class="product-image-container">
            <img class="product-image"
            fetchpriority=high
            loading=eager
            decode=sync
            src="/images/products/black-2-slot-toaster.webp">
        </div>

        <div class="product-name">
            2 Slot Toaster - Black
        </div>

        <div class="product-rating-container">
            <img class="product-rating-stars"
            src="/images/ratings/rating-50.png"
            fetchpriority='high'>
            <div class="product-rating-count link-primary">
            2197
            </div>
        </div>

        <div class="product-price">
          $18.99
        </div>
<div class="product-quantity-container"><select class="ProductQuantitySelector"><option selected=selected value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option></select></div>
        <div class='size-chart-container'>
          

        </div>

          <div class="added-to-cart added-to-cart-7nDww">
            <img src="/images/icons/checkmark.svg">
            Added
          </div>

          <button class="add-to-cart-button button-primary"
          data-product-id="7nDww">
            Add to Cart
          </button>
        </div>
    </div>
    "
`;
